[project]
name = "rerun-loader-python-example-urdf"
version = "0.1.0"
description = "An example data-loader plugin that lets you view URDF files in Rerun"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.3.1",
  "numpy>=2.2.3",
  "pillow>=11.1.0",
  "pycollada>=0.9",
  "pyyaml>=6.0.2",
  "rerun-sdk>=0.22.0",
  "scipy>=1.15.2",
  "trimesh>=4.6.2",
  "urdfdom-py",
]

[project.scripts]
rerun-loader-urdf = "rerun_loader_python_example_urdf:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
ignore = [
  "D1",
  "D202",
  "D107",
  "D203",
  "D212",
  "D401",
  "D402",
  "D415",
  "D416",
  "E501",
  "TID252",
  "UP007",
]

line-length = 120
select = [
  "D",   # pydocstyle codes https://www.pydocstyle.org/en/latest/error_codes.html
  "E",   # pycodestyle error codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
  "F",   # Flake8 error codes https://flake8.pycqa.org/en/latest/user/error-codes.html
  "I",   # Isort
  "TID", # flake8-tidy-imports
  "W",   # pycodestyle warning codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
  "UP",  # pyupgrade (ensures idomatic code for supported python version)
]

[tool.uv.sources]
urdfdom-py = { git = "https://github.com/ros/urdf_parser_py.git", rev = "ros2" }
